src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Research_Area__c</fullName>
        <label>Research Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affective neuroscience</fullName>
                </value>
                <value>
                    <fullName>Biochemistry</fullName>
                </value>
                <value>
                    <fullName>Biocontrol</fullName>
                </value>
                <value>
                    <fullName>Biodynamics</fullName>
                </value>
                <value>
                    <fullName>Bioinformatics</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Biomaterials</fullName>
                </value>
                <value>
                    <fullName>Biomechanics</fullName>
                </value>
                <value>
                    <fullName>Biomonitoring</fullName>
                </value>
                <value>
                    <fullName>Biopolymers</fullName>
                </value>
                <value>
                    <fullName>Botany</fullName>
                </value>
                <value>
                    <fullName>Cell biology</fullName>
                </value>
                <value>
                    <fullName>Cognitive neuroscience</fullName>
                </value>
                <value>
                    <fullName>Computational neuroscience</fullName>
                </value>
                <value>
                    <fullName>Conservation biology</fullName>
                </value>
                <value>
                    <fullName>Developmental biology</fullName>
                </value>
                <value>
                    <fullName>Ecology</fullName>
                </value>
                <value>
                    <fullName>Evolutionary genetics</fullName>
                </value>
                <value>
                    <fullName>Genetics</fullName>
                </value>
                <value>
                    <fullName>Genomics</fullName>
                </value>
                <value>
                    <fullName>Immunogenetics</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Immunotherapy</fullName>
                </value>
                <value>
                    <fullName>Medical imaging</fullName>
                </value>
                <value>
                    <fullName>Microbiology</fullName>
                </value>
                <value>
                    <fullName>Molecular biology</fullName>
                </value>
                <value>
                    <fullName>Neuroscience</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Optometry</fullName>
                </value>
                <value>
                    <fullName>Pathology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Research_Topic_Report_Description__c</fullName>
        <label>Research Topic Report Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Research_Topic_Report_URL__c</fullName>
        <label>Research Topic Report URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Research_Topic_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Research Topic Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Research_Topic_Status__c</fullName>
        <label>Research Topic Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Research_Type__c</fullName>
        <label>Research Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Research Topic</fullName>
                    <color>#0B6FCE</color>
                    <label>Research Topic</label>
                </value>
                <value>
                    <fullName>Research Study</fullName>
                    <color>#78C953</color>
                    <label>Research Study</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_to_Non_Regulatory_Description__c</fullName>
        <inlineHelpText>Use the enter key to add descriptions on a new line.</inlineHelpText>
        <label>Response to Non-Regulatory Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_to_Non_Regulatory_URL__c</fullName>
        <inlineHelpText>Please add comma separated URLs if you are adding more than one</inlineHelpText>
        <label>Response to Non-Regulatory URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_to_Regulatory_Description__c</fullName>
        <inlineHelpText>Use the enter key to add descriptions on a new line.</inlineHelpText>
        <label>Response to Regulatory Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_to_Regulatory_URL__c</fullName>
        <inlineHelpText>Please add comma separated URLs if you are adding more than one</inlineHelpText>
        <label>Response to Regulatory URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_to_Regulatory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Investigator’s brochures; clinical study reports; periodic reports; submission docs; briefing documents; regulatory response docs</inlineHelpText>
        <label>Response to Regulatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_to_Unsolicited_Non_Regulatory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Applies to all responses provided by qualified personnel to unsolicited requests for medical/scientific information from an external, non-regulatory party</inlineHelpText>
        <label>Response to Unsolicited Non-Regulatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Approve_StudyDeliverable_Duration__c</fullName>
        <description>Duration Study was in Stage =  Review/ Approve Study Deliverable before moving to Finalize, Store Study Deliverables</description>
        <formula>IF(ISNULL(Date_Finalize_Store_Study_Deliverables__c), TODAY()-Date_Review_Approve_Study_Deliverable__c, Date_Finalize_Store_Study_Deliverables__c- Date_Review_Approve_Study_Deliverable__c)</formula>
        <inlineHelpText>Duration Study was in Stage =  Review/ Approve Study Deliverable before moving to Finalize, Store Study Deliverables</inlineHelpText>
        <label>Review/Approve StudyDeliverable Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scientific_Disclosures_Description__c</fullName>
        <inlineHelpText>Use the enter key to add descriptions on a new line.</inlineHelpText>
        <label>Scientific Disclosures Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scientific_Disclosures_URL__c</fullName>
        <inlineHelpText>Please add comma separated URLs if you are adding more than one</inlineHelpText>
        <label>Scientific Disclosures URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scientific_Disclosures__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Journal articles, abstracts, posters, letters to the editor, supplements, oral presentations, book chapters, lecture transcripts, symposia highlights, editorials, book reviews, scientific reviews, and audio recordings</inlineHelpText>
        <label>Scientific Disclosures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Study_Type__c</fullName>
        <inlineHelpText>Choose the appropriate sub type depending on the type.</inlineHelpText>
        <label>Study Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Study_Description__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Method Development</fullName>
                </value>
                <value>
                    <fullName>Analytical Measurement Procedure</fullName>
                </value>
                <value>
                    <fullName>Imaging Procedure</fullName>
                </value>
                <value>
                    <fullName>Biometric Procedure</fullName>
                </value>
                <value>
                    <fullName>Test Development Assessment Procedure</fullName>
                </value>
                <value>
                    <fullName>Animal Study</fullName>
                </value>
                <value>
                    <fullName>Cell Study</fullName>
                </value>
                <value>
                    <fullName>Genetic Engineering</fullName>
                </value>
                <value>
                    <fullName>Biochemistry</fullName>
                </value>
                <value>
                    <fullName>Material Development</fullName>
                </value>
                <value>
                    <fullName>Genetic Studies</fullName>
                </value>
                <value>
                    <fullName>Phase I</fullName>
                </value>
                <value>
                    <fullName>Phase II</fullName>
                </value>
                <value>
                    <fullName>Phase III</fullName>
                </value>
                <value>
                    <fullName>Phase IV</fullName>
                </value>
                <value>
                    <fullName>Intervention Study - Field Study</fullName>
                </value>
                <value>
                    <fullName>Intervention Study - Group Study</fullName>
                </value>
                <value>
                    <fullName>Cohort Study - Prospective</fullName>
                </value>
                <value>
                    <fullName>Cohort Study - Historical</fullName>
                </value>
                <value>
                    <fullName>Case Control Study</fullName>
                </value>
                <value>
                    <fullName>Cross-Sectional Study</fullName>
                </value>
                <value>
                    <fullName>Ecological Study</fullName>
                </value>
                <value>
                    <fullName>Monitoring, surveillance</fullName>
                </value>
                <value>
                    <fullName>Description with registry data</fullName>
                </value>
                <value>
                    <fullName>Pharmacokinetics (PK)</fullName>
                </value>
                <value>
                    <fullName>Pharmacodynamics (PD)</fullName>
                </value>
                <value>
                    <fullName>Toxicology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secure_Resources_Duration__c</fullName>
        <description>Duration Study was in Stage = Secure Resources before moving to Study Development.</description>
        <formula>IF(ISNULL(Date_Study_Development__c), TODAY()-Date_Secure_Resources__c, Date_Study_Development__c- Date_Secure_Resources__c)</formula>
        <inlineHelpText>Duration Study was in Stage = Secure Resources before moving to Study Development.</inlineHelpText>
        <label>Secure Resources Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_Variance__c</fullName>
        <description>Difference between Actual Start Date and Anticipated Start Date</description>
        <formula>Actual_Start_Date__c - Anticipated_Start_Date__c</formula>
        <inlineHelpText>Difference between Actual Start Date and Anticipated Start Date</inlineHelpText>
        <label>Start Date Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Statistical_Analysis_Plan_Description__c</fullName>
        <inlineHelpText>Use the enter key to add descriptions on a new line.</inlineHelpText>
        <label>Statistical Analysis Plan Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Statistical_Analysis_Plan_URL__c</fullName>
        <inlineHelpText>Please add comma separated URLs if you are adding more than one</inlineHelpText>
        <label>Statistical Analysis Plan URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Statistical_Analysis_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Statistical Analysis Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Study_Deliverable_s_Results_Duration__c</fullName>
        <description>Duration Study was in Stage =  Study Deliverable(s) and Results before moving to Review/ Approve Study Deliverable</description>
        <formula>IF(ISNULL(Date_Review_Approve_Study_Deliverable__c), TODAY()-Date_Study_Deliverable_s_and_Results__c, Date_Review_Approve_Study_Deliverable__c- Date_Study_Deliverable_s_and_Results__c)</formula>
        <inlineHelpText>Duration Study was in Stage =  Study Deliverable(s) and Results before moving to Review/ Approve Study Deliverable</inlineHelpText>
        <label>Study Deliverable(s) &amp; Results Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Study_Description__c</fullName>
        <inlineHelpText>Describes the type of Research Study/Research Topic.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Classification__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Study</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Theoretical</fullName>
                </value>
                <value>
                    <fullName>Therapy Study</fullName>
                </value>
                <value>
                    <fullName>Prognostic Study</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Study</fullName>
                </value>
                <value>
                    <fullName>Observational Study w/ Drugs</fullName>
                </value>
                <value>
                    <fullName>Secondary Data Analysis</fullName>
                </value>
                <value>
                    <fullName>Case Series</fullName>
                </value>
                <value>
                    <fullName>Single Case Report</fullName>
                </value>
                <value>
                    <fullName>Experimental</fullName>
                </value>
                <value>
                    <fullName>Observational</fullName>
                </value>
                <value>
                    <fullName>Meta Analysis</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Systematic</fullName>
                </value>
                <value>
                    <fullName>Simple (Narrative)</fullName>
                </value>
                <value>
                    <fullName>In Vivo</fullName>
                </value>
                <value>
                    <fullName>In Vitro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Development_Duration__c</fullName>
        <description>Duration Study was in Stage = Study Development before moving to Study Execution</description>
        <formula>IF(ISNULL(Date_Study_Execution__c), TODAY()-Date_Study_Development__c, Date_Study_Execution__c- Date_Study_Development__c)</formula>
        <inlineHelpText>Duration Study was in Stage = Study Development before moving to Study Execution</inlineHelpText>
        <label>Study Development Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Study_Device__c</fullName>
        <inlineHelpText>Capture whether a study involves a device such as comparison of two devices, etc.  It is not meant to capture whether the molecule involved uses a device, rather whether the device is integral to the study.</inlineHelpText>
        <label>Does the Study involve use of a Device?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Execution_Duration__c</fullName>
        <description>Duration Study was in Stage = Study Execution before moving to Oversee Execution of Research</description>
        <formula>IF(ISNULL(Date_Oversee_Execution_of_Research__c), TODAY()-Date_Study_Execution__c, Date_Oversee_Execution_of_Research__c- Date_Study_Execution__c)</formula>
        <inlineHelpText>Duration Study was in Stage = Study Execution before moving to Oversee Execution of Research</inlineHelpText>
        <label>Study Execution Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Study_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freeze</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Study_Project_ID__c</fullName>
        <displayFormat>{YYYY}-{0000}</displayFormat>
        <label>Study ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Study_Project_Report_Description__c</fullName>
        <inlineHelpText>Use the enter key to add descriptions on a new line.</inlineHelpText>
        <label>Study Report Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Study_Region__c</fullName>
        <inlineHelpText>Choose the region that benefits from the study.  If multiple regions benefit, then choose &quot;Global&quot;.</inlineHelpText>
        <label>Region benefiting from the study</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Emerging Markets</fullName>
                    <color>#78C953</color>
                    <label>Emerging Markets</label>
                </value>
                <value>
                    <fullName>Global (Multiple Regions)</fullName>
                    <color>#F3D904</color>
                    <label>Global (Multiple Regions)</label>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                    <color>#0B6FCE</color>
                    <label>Latin America</label>
                </value>
                <value>
                    <fullName>North America</fullName>
                    <color>#E27001</color>
                    <label>North America</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Report_Approval_Date__c</fullName>
        <label>Study Report Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Study_Report_Approval_Required__c</fullName>
        <label>Study Report Approval Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Report_URL__c</fullName>
        <inlineHelpText>Please add comma separated URLs if you are adding more than one</inlineHelpText>
        <label>Study Report URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Study_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Study Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Study_Stage__c</fullName>
        <label>Study Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Questionnaire Needs Review</fullName>
                    <color>#0B6FCE</color>
                    <label>Questionnaire Needs Review</label>
                </value>
                <value>
                    <fullName>Questionnaire</fullName>
                    <color>#78C953</color>
                    <label>Questionnaire</label>
                </value>
                <value>
                    <fullName>Ideation</fullName>
                    <color>#E27001</color>
                    <label>Ideation</label>
                </value>
                <value>
                    <fullName>Secure Resources</fullName>
                    <color>#A845DC</color>
                    <label>Secure Resources</label>
                </value>
                <value>
                    <fullName>Study Development</fullName>
                    <color>#F3D904</color>
                    <label>Study Development</label>
                </value>
                <value>
                    <fullName>Study Execution</fullName>
                    <color>#A53711</color>
                    <label>Study Execution</label>
                </value>
                <value>
                    <fullName>Oversee Execution of Research</fullName>
                    <color>#66E9BD</color>
                    <label>Oversee Execution of Research</label>
                </value>
                <value>
                    <fullName>Data Analysis and Reporting</fullName>
                    <color>#0B24BE</color>
                    <label>Data Analysis and Reporting</label>
                </value>
                <value>
                    <fullName>Study Deliverable(s) and Results</fullName>
                    <color>#419249</color>
                    <label>Study Deliverable(s) and Results</label>
                </value>
                <value>
                    <fullName>Review/ Approve Study Deliverable</fullName>
                    <color>#B6E32E</color>
                    <label>Review/ Approve Study Deliverable</label>
                </value>
                <value>
                    <fullName>Finalize, Store Study Deliverables</fullName>
                    <color>#641CCF</color>
                    <label>Finalize, Store Study Deliverables</label>
                </value>
                <value>
                    <fullName>Close Out</fullName>
                    <color>#F96FB7</color>
                    <label>Close Out</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TPO_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search either by Name or Capability. After selecting lookup, change search choice to &quot;All Fields&quot; to search on capabilities.
If TPO is not listed, search and select *Other* from the list.</inlineHelpText>
        <label>TPO</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$User.Username</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>TPO_Location__c.Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <infoMessage>Select &apos;All Fields&apos; in order to search by Capability or Location.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TPO_Location__c</referenceTo>
        <relationshipName>RWE_Studies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_Primary__c</fullName>
        <label>Therapeutic Area (Primary)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Autoimmune Diseases</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Gynecology</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Psychiatry &amp; Pain</fullName>
                </value>
                <value>
                    <fullName>Rheumatology</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
                <value>
                    <fullName>Non-Therapeutic Area Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_objective_of_this_study__c</fullName>
        <label>Objective of this Study/Topic?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_HCPs_be_paid_for_participation__c</fullName>
        <label>Will HCPs be paid for participation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not Sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_be_Topic_be_executed_internally__c</fullName>
        <label>Will the Topic be executed internally?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Research</label>
    <listViews>
        <fullName>All_Studies</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Study_Stage__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Study_Project_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>notContain</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <label>All Studies</label>
    </listViews>
    <listViews>
        <fullName>DRDP_Study_Approval_Queue_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>Study Approval Queue</label>
        <queue>DRDP_Study_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Research</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Anticipated_Date_Validation</fullName>
        <active>true</active>
        <description>Prevents Anticipated End date to be before Start Date</description>
        <errorConditionFormula>Anticipated_End_Date__c &lt;= Anticipated_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Anticipated_End_Date__c</errorDisplayField>
        <errorMessage>Do you have a time machine? The Anticipated End Date cannot occur before the Anticipated Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IS_Validation</fullName>
        <active>true</active>
        <description>&quot;Does the Study/Project involve LY? &quot;field is required when Status= Active, Completed or Closed.</description>
        <errorConditionFormula>AND(OR(ISPICKVAL( Project_Status__c , &apos;Active&apos;) ,ISPICKVAL( Project_Status__c , &apos;Completed&apos;) ,ISPICKVAL( Project_Status__c , &apos;Closed&apos;)), ISPICKVAL( Is_Molecule__c,&apos;&apos;), TEXT(Research_Type__c)!=&apos;Research Topic&apos;,TEXT(Study_Description__c) != &apos;Modeling&apos;, TEXT(Study_Description__c) != &apos;Systematic Literature Review&apos;)</errorConditionFormula>
        <errorDisplayField>Is_Molecule__c</errorDisplayField>
        <errorMessage>This field is required when Status= Active, Completed or Closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Protocol_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Protocol_Approval_Required__c,&apos;Yes&apos;),ISBLANK( Protocol_Approval_Date__c ), Final_Protocol_checkbox__c ,NOT(ISNEW()))</errorConditionFormula>
        <errorDisplayField>Protocol_Approval_Date__c</errorDisplayField>
        <errorMessage>This field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Study_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Study_Report_Approval_Required__c ,&apos;Yes&apos;),ISBLANK( Study_Report_Approval_Date__c ), Study_Report__c ,NOT(ISNEW()))</errorConditionFormula>
        <errorDisplayField>Study_Report_Approval_Date__c</errorDisplayField>
        <errorMessage>This field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_VerifyStatus_ActualStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(
TEXT(Research_Type__c)!=&apos;Research Topic&apos;,
NOT(ISPICKVAL(PRIORVALUE(Project_Status__c),&quot;Active&quot;)), 
NOT(ISPICKVAL(PRIORVALUE(Project_Status__c),&quot;Completed&quot;)),
NOT(ISPICKVAL(Project_Status__c,&quot;Active&quot;)),
NOT(ISPICKVAL(Project_Status__c,&quot;Completed&quot;)),
NOT(ISBLANK(Actual_Start_Date__c)),
ISCHANGED(Actual_Start_Date__c),
NOT(ISNEW())
),
AND(
TEXT(Research_Type__c)!=&apos;Research Topic&apos;,
NOT(ISPICKVAL(Project_Status__c,&quot;Active&quot;)),
NOT(ISPICKVAL(Project_Status__c,&quot;Completed&quot;)),
ISCHANGED(Actual_Start_Date__c),
NOT(ISBLANK(Actual_Start_Date__c)),
NOT(ISNEW())
)
)</errorConditionFormula>
        <errorDisplayField>Actual_Start_Date__c</errorDisplayField>
        <errorMessage>Oops, try again! Status must be Active or Completed to enter/update the Actual Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Verify_ActualStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>Actual_Start_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Actual_Start_Date__c</errorDisplayField>
        <errorMessage>Do you have a time machine? The Actual Start Date cannot be a future date.</errorMessage>
    </validationRules>
</CustomObject>